combo needed to set the maxElementSize correctly when reflowing. b=31072 r=buster a=jar